--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-
+    <h2>Hello, people!<h2>
+    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
