--- a/goodbye.html
+++ b/goodbye.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Goodbye, world</h1>
+    <h2>Goodbye</h2>  
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
